--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -172,7 +172,7 @@ title: home
     </div>
   </div>
 
-  <div class="grid-x small-up-2 medium-up-4 large-up-4">
+  <div class="grid-x small-up-2 medium-up-4">
     <div class="cell auto">
       <div class="card" id="image1">
         <h2>Different Makes and Models</h2>
