added motion ui

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -172,8 +172,8 @@ title: home
     </div>
   </div>
 
-  <div class="grid-x small-up-2 medium-up-4">
-    <div class="cell auto">
+  <div class="grid-x">
+    <div class="cell medium-3 small-6">
       <div class="card" id="image1">
         <h2>Different Makes and Models</h2>
         <div class="card-section">
@@ -197,7 +197,7 @@ title: home
         </div>
       </div>
     </div>
-    <div class="cell auto">
+    <div class="cell medium-3 small-6">
       <div class="card" id="image2">
         <h2>Weekend Car Rental Special</h2>
         <div class="card-section">
@@ -219,7 +219,7 @@ title: home
         </div>
       </div>
     </div>
-    <div class="cell auto">
+    <div class="cell medium-3 small-6">
       <div class="card" id="image3">
         <h2>Our Locations</h2>
         <div class="card-section">
@@ -244,7 +244,7 @@ title: home
         </div>
       </div>
     </div>
-    <div class="cell auto">
+    <div class="cell medium-3 small-6">
       <div class="card" id="newsletter">
         <h2>Subscribe to Our Newsletter</h2>
         <div class="card-section">
