--- a/src/pages/cars.html
+++ b/src/pages/cars.html
@@ -47,7 +47,8 @@ pagetitle: Car Hire WorldWide
               <div class="media-object-section">
                 <img
                   class="cars_box_img"
-                  src="{{imageUrl}}"
+                  data-interchange="{{dataInterchange}}"
+                  src="#"
                   title="car-rental-website-cheverolet-aveo"
                 />
               </div>
@@ -101,7 +102,8 @@ pagetitle: Car Hire WorldWide
               <div class="media-object-section">
                 <img
                   class="cars_box_img"
-                  src="{{imageUrl}}"
+                  data-interchange="{{dataInterchange}}"
+                  src="#"
                   title="car-rental-website-cheverolet-aveo"
                 />
               </div>
